Prevent step titles from being hidden under the sticky menu

--- a/assets/styles/components/_stepper.scss
+++ b/assets/styles/components/_stepper.scss
@@ -107,6 +107,9 @@ $stepper-circle-center: $stepper-title-pad-top + 1px + ($stepper-circle-size * 0
 }
 
 .stepper__step-title {
+    #cdoc-content.customizable & {
+        scroll-margin-top: 175px;
+    }
     display: block;
     margin: 0;
     padding: $stepper-title-pad-top 0;
